# REST_auth

./: READMe.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py
accounts/migrations/: 0001_initial.py
blogapi_project/: settings.py  urls.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
